--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -249,21 +249,21 @@
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-map-marker"></span>
-                                                                        <span class="text">PO BOX 16122 COLLINS STREET WEST VICTORIA, NEWYORK </span>
+                                                                        <span class="text">PO BOX 16122 COLLINS STREET West Victoria, NewYork </span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-phone"></span>
-                                                                        <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                                                        <span class="text">CALL US : +1 (773)901-0254</span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-envelope"></span>
-                                                                        <span class="text">EMAIL : SUPPORT@NICHE_THEME</span>
+                                                                        <span class="text">EMAIL : hbworks.ng@gmail.com</span>
                                                                     </div>
                                                                 </li>
                                                             </ul>                                                     
@@ -275,21 +275,21 @@
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-map-marker"></span>
-                                                                        <span class="text">PO BOX 16122 COLLINS STREET WEST VICTORIA, NEWYORK </span>
+                                                                        <span class="text">PO BOX 16122 COLLINS STREET West Victoria, NewYork </span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-phone"></span>
-                                                                        <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                                                        <span class="text">CALL US : +1 (773)901-0254</span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-envelope"></span>
-                                                                        <span class="text">EMAIL : SUPPORT@THEMESFLAT.COM</span>
+                                                                        <span class="text">EMAIL : hbworks.ng@gmail.com</span>
                                                                     </div>
                                                                 </li>
                                                             </ul>                                                     
@@ -301,21 +301,21 @@
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-map-marker"></span>
-                                                                        <span class="text">PO BOX 16122 COLLINS STREET WEST VICTORIA, NEWYORK </span>
+                                                                        <span class="text">PO BOX 16122 COLLINS STREET West Victoria, NewYork </span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-phone"></span>
-                                                                        <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                                                        <span class="text">CALL US : +1 (773)901-0254</span>
                                                                     </div>
                                                                 </li>
 
                                                                 <li class="clearfix">
                                                                     <div class="inner">
                                                                         <span class="fa fa-envelope"></span>
-                                                                        <span class="text">EMAIL : SUPPORT@THEMESFLAT.COM</span>
+                                                                        <span class="text">EMAIL : hbworks.ng@gmail.com</span>
                                                                     </div>
                                                                 </li>
                                                             </ul>                                                     
@@ -373,7 +373,7 @@
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">SUPPORT@NICHE_THEME</span>
+                                            <span class="text">hbworks.ng@gmail.com</span>
                                         </div>
                                     </li>
                                 </ul>
