--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -235,10 +235,10 @@
                                                         <span class="inner">Head Office</span>
                                                     </li>
                                                     <li class="item-title">
-                                                        <span class="inner">Colombia</span>
+                                                        <span class="inner">Lagos Nigeria</span>
                                                     </li>
                                                     <li class="item-title">
-                                                        <span class="inner">Mexico</span>
+                                                        <span class="inner">Chicago USA</span>
                                                     </li>
                                                 </ul>
 
